option('anticheat-server', type: 'boolean', value: false, description: 'r1ch.net anticheat server')
option('auto-reply', type: 'boolean', value: true, description: 'auto reply to !version probes')
option('base-game', type: 'string', value: 'action', description: 'base game directory')
option('client-gtv', type: 'boolean', value: false, description: 'client GTV relay')
option('client-ui', type: 'boolean', value: true, description: 'client UI')
option('default-game', type: 'string', value: '', description: 'default game directory')
option('dynamic-lights', type: 'boolean', value: true, description: 'dynamic lighting')
option('game-abi-hack', type: 'feature', value: 'disabled', description: 'game ABI compat hack')
option('homedir', type: 'string', value: '~/.aqtion', description: 'default home directory')
option('icmp-errors', type: 'feature', value: 'auto', description: 'handle ICMP errors')
option('libcurl', type: 'feature', value: 'auto', description: 'libcurl support')
option('libjpeg', type: 'feature', value: 'auto', description: 'libjpeg support')
option('libpng', type: 'feature', value: 'auto', description: 'libpng support')
option('map-checksum', type: 'boolean', value: true, description: 'verify map checksums')
option('md3', type: 'boolean', value: true, description: 'MD3 models support')
option('mvd-client', type: 'boolean', value: true, description: 'MVD client')
option('mvd-server', type: 'boolean', value: true, description: 'MVD server')
option('openal-dynamic', type: 'boolean', value: false, description: 'link to OpenAL dynamically')
option('openal', type: 'feature', value: 'auto', description: 'OpenAL support')
option('oss', type: 'feature', value: 'disabled', description: 'OSS support')
option('packetdup-hack', type: 'boolean', value: false, description: 'packet duplication hack')
option('platform', type: 'string', value: 'Steam', description: 'Build platform name')
option('sdl2', type: 'feature', value: 'auto', description: 'SDL2 support')
option('software-sound', type: 'boolean', value: true, description: 'software sound')
option('system-console', type: 'boolean', value: true, description: 'system console')
option('tests', type: 'boolean', value: false, description: 'tests')
option('tga', type: 'boolean', value: true, description: 'TGA images support')
option('variable-fps', type: 'boolean', value: false, description: 'variable server FPS')
option('vid-geometry', type: 'string', value: '640x480', description: 'default window geometry')
option('vid-modelist', type: 'string', value: '640x480 800x600 1024x768', description: 'default video mode list')
option('wayland', type: 'feature', value: 'auto', description: 'wayland support')
option('windows-crash-dumps', type: 'boolean', value: true, description: 'windows crash dumps')
option('windows-egl', type: 'boolean', value: true, description: 'windows EGL support')
option('windows-service', type: 'boolean', value: true, description: 'run as windows service')
option('x11', type: 'feature', value: 'auto', description: 'X11 support')
option('zlib', type: 'feature', value: 'auto', description: 'zlib support')
